不要ファイルを削除、整理
